--- a/index.html
+++ b/index.html
@@ -4,28 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emotion Analyzer</title>
-	<link rel="icon" href="favicon.png">
+    <link rel="icon" href="favicon.png">
     <link
       rel="stylesheet"
-      href="bootstrap.min.css"
+      href="frameworks/bootstrap/bootstrap.min.css"
     />
-	<!--
-	<link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    />
-	-->
     <link
       rel="stylesheet"
-      href="dark.min.css"
+      href="frameworks/sweetalert2/dark.min.css"
     />
-	<!--
-	<link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark/dark.min.css"
-    />
-	-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="container py-5">
@@ -42,9 +30,10 @@
       <div class="row justify-content-center">
         <div class="col-md-8">
           <form id="emotionForm">
-            <div class="mb-3">
+            <div class="mb-3 input-wrapper">
               <label for="emotionInput" class="form-label">Your Emotion</label>
               <input type="text" class="form-control" id="emotionInput" required />
+              <button type="button" id="clearInput" class="btn-close" aria-label="Clear"></button>
             </div>
             <button type="submit" id="submit-btn" class="btn btn-primary w-100">Analyze Emotion</button>
           </form>
@@ -78,10 +67,8 @@
       </div>
     </div>
 
-    <script src="bootstrap.bundle.min.js"></script>
-	<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>-->
-    <script src="sa2.js"></script>
-	<!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>-->
-    <script src="script.js"></script>
+    <script src="frameworks/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="frameworks/sweetalert2/sa2.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
